diesel_compile_tests/tests/ui/as_expression_bad_sql_type.stderr
error: `sql_type` must be in the form `sql_type = "value"`
 --> <macro expansion>:1:1
  |
1 | #[sql_type(Foo)]
  | ^

error: `sql_type` must be in the form `sql_type = "value"`
 --> <macro expansion>:1:1
  |
1 | #[sql_type]
  | ^

error: Invalid Rust type
 --> <macro expansion>:1:1
  |
1 | #[sql_type = "@%&&*"]
  | ^

error: Invalid Rust type
 --> <macro expansion>:1:1
  |
1 | #[sql_type = "1omg"]
  | ^

error: aborting due to 4 previous errors

